# auto_equity_recovery

./: .env-sample  .gitignore  .pre-commit-config.yaml  .ruff.toml  DASHBOARD_SOLUTION.md  MANIFEST.in  PROJECT_SUMMARY.md  PROMPTING_AND_YAML_GUIDE.md  README.md  RECIPE_CREATION_GUIDE.md  RECIPE_TEMPLATES.md  REDSHIFT_MARKER_SYSTEM.md  cleanup.sh  cleanup_dry_run.sh  create_recipe.py  cron_setup.sh  dashboard.py  dashboard_log.err  dashboard_log.out  dashboard_service.plist  debug_get_leads.py  debug_leads.py  demo_completion_tracking.py  filtered_convo.csv  fix_report.py  manual_summarizer.py  only_3312951302.txt  only_6688569768.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.py  run_recipe.sh  setup_codex.sh  setup_env.sh  start_modern_dashboard.sh  test_all_recipes.py  test_completion_tracking.py  test_invalid_value.py  test_invalid_values.py  (+5 more)
dashboard/: README.md  __init__.py  app.py  requirements.txt  streamlit_app.py  utils.py
documentation/: README.md  codebase_maintenance.md  dashboard_service_setup.md  execution_guide.md  for_dummies_recipe_guide.md  meta_yml_migration_procedure.md  meta_yml_schema_guide.md  python_processors_guide.md
lead_recovery/: __init__.py  __main__.py  analysis.py  cache.py  cli.py  config.py  constants.py  db_clients.py  exceptions.py  fs.py  gsheets.py  processor_runner.py  python_flags.py  python_flags_manager.py  recipe_loader.py  recipe_schema.py  reporting.py  summarizer.py  summarizer_helpers.py  utils.py  yaml_validator.py
modern_dashboard/: README.md  start_dashboard.sh
tests/: conftest.py  (+9 more)
(+138 files in other folders)
